# ebirders-pt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.override.yml.example  docker-compose.yml  package-lock.json  package.json  postgres.mk  pyproject.toml  rabbitmq.mk  requirements.txt  webpack.config.js
.github/workflows/: ci.yml
apps/base/: apps.py  forms.py  views.py
apps/base/templates/: base.html  page.html
apps/base/templates/includes/: footer.html  header.html
apps/checklists/: apps.py  filters.py  forms.py  loaders.py  queries.py  urls.py  views.py
apps/checklists/management/commands/: load_api.py
apps/checklists/migrations/: 0001_initial.py  0002_add_state_county.py  0003_set_district_county.py  0004_location_byname.py  0005_observation_time.py  0006_set_observation_time.py  0007_remove_unused_location_fields.py
apps/checklists/models/: checklist.py  county.py  district.py  location.py  observation.py  observer.py  region.py  species.py  state.py
apps/checklists/templatetags/: checklists.py
apps/checklists/tests/: test_filters.py  test_forms.py  test_urls.py  test_views.py
apps/contact/: apps.py  forms.py  views.py
apps/contact/templates/contact/: email.txt  (+1 more)
apps/contact/tests/: test_views.py
apps/dashboards/: apps.py  urls.py  views.py
apps/dashboards/templatetags/: charts.py  numbers.py  tables.py
apps/data/: admin.py  apps.py  autocompletes.py  fields.py  forms.py  loaders.py  urls.py  views.py  widgets.py
apps/data/migrations/: 0001_initial.py  0002_add_state_county.py  0002_observer_multiple.py  0003_observer_enabled.py  0003_set_district_county.py  0004_alter_observation_count.py  0004_location_byname.py  0005_alter_observation_approved_and_more.py  0005_observation_time.py  0006_remove_species_exotic_code_and_more.py  0006_set_observation_time.py  0007_remove_observation_age_sex_and_more.py  0007_remove_unused_location_fields.py  0008_observer_byname.py  0008_remove_checklist_group_remove_checklist_protocol.py  0009_observation_started.py  0009_rename_coverage_checklist_area.py  0010_checklist_published_observation_published.py  0010_set_observation_started.py  0011_filter.py  0011_set_observer_identifier.py  0012_observation_decision.py  0013_event.py  0014_alter_species_category.py  0015_add_fields_for_media_types.py  0016_filter_location.py  0017_alter_event_type.py  0018_remove_observation_decision_and_more.py  0019_auto_20250710_1003.py  0020_auto_20250710_1004.py  0021_alter_location_identifier_alter_location_name_and_more.py
apps/data/models/: __init__.py  area.py  checklist.py  event.py  filter.py  location.py  observation.py  observer.py  species.py
apps/data/tests/: test_autocompletes.py  test_forms.py  test_loader.py
apps/dates/: apps.py  forms.py
apps/digest/: apps.py  urls.py  views.py
apps/ebirders/: apps.py  urls.py  views.py
apps/events/: apps.py  urls.py  views.py
apps/events/tests/: test_views.py
apps/filters/: apps.py  autocompletes.py  enums.py  forms.py  urls.py  views.py
apps/filters/tests/: test_autocompletes.py  test_category_filter.py  test_checklist_order.py  test_date_range_filter.py  test_forms.py  test_location_filter.py  test_observation_order.py  test_observer_filter.py  test_species_order.py
apps/locations/: apps.py  forms.py  receivers.py  urls.py  views.py
apps/news/: apps.py  forms.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py  0002_materialized_views.py  0003_delete_yearlist.py  0003_year_list_view.py  0004_rebuild_materialized_views.py  0005_redelete_yearlist.py
apps/news/models/: __init__.py  observer_species_latest.py  observer_species_monthly.py  observer_species_weekly.py  year_list.py
apps/news/templatetags/: charts.py  formats.py  numbers.py  tables.py
apps/news/tests/: conftest.py
apps/notifications/: admin.py  apps.py  models.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/templatetags/: notification_tags.py
apps/observations/: apps.py  filters.py  forms.py  queries.py  urls.py  views.py
apps/observations/templatetags/: observation_tags.py
apps/observations/tests/: test_forms.py  test_urls.py  test_views.py
apps/observers/: apps.py  forms.py  receivers.py  urls.py  views.py
apps/overview/: apps.py  urls.py  views.py
apps/pages/: admin.py  apps.py
apps/species/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
apps/species/migrations/: 0001_initial.py  0002_materialized_views.py  0003_rebuild_materialized_views.py
apps/species/templatetags/: species_tags.py
apps/species/tests/: test_forms.py  test_urls.py  test_views.py
apps/updates/: admin.py  apps.py  fields.py  models.py  urls.py  views.py  widgets.py
apps/updates/migrations/: 0001_initial.py
apps/updates/tests/: test_views.py
apps/users/: admin.py  apps.py  models.py
apps/users/migrations/: 0001_initial.py
assets/: robots.txt  sitemap.xml
assets/css/: site.css
assets/images/: 404.xcf  500.xcf  ebirders.xcf
assets/js/: index.js
config/: __init__.py  asgi.py  celery.py  context_processors.py  gunicorn.py  settings.py  urls.py  wsgi.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/pt/LC_MESSAGES/: django.mo  django.po
notebooks/: api_fields.ipynb  location_names.ipynb  observer_names.ipynb  species_names.ipynb
notebooks/templates/notebooks/: location-names.html  observer-names.html  species-names.html
static/css/: site.css
templates/: 403.html  404.html  500.html  base.html  page.html  robots.txt  sitemap.xml
templates/flatpages/: about.html  base.html
templates/includes/: footer.html  header.html  main-menu.html
tests/: factories.py  test_pages.py  test_translations.py  test_views.py
tests/integration/: test_loader.py
tests/unit/: conftest.py  test_big_day_page.py  test_checklists_page.py  test_data_autocomplete.py  test_home_page.py  test_monthly_news_page.py  test_news_autocomplete.py  test_news_page.py  test_observations_page.py  test_species_page.py  test_weekly_news_page.py  test_yearlist_page.py
(+110 files in other folders)
