[project]
name = "django-project-template"
version = "0.0.2"
description = "A template for Django-based web sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "django-autocomplete-light>=3.11.0",
    "django-celery-beat>=2.7.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-spaceless-templates>=1.0.2",
    "django-storages>=1.14.4",
    "django-watchman>=1.3.0",
    "django>=5.1.3",
    "ebird-checklists>=1.0.0",
    "gunicorn>=23.0.0",
    "ipython>=8.29.0",
    "psycopg2-binary>=2.9.10",
    "pymemcache>=4.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=2.0.7",
    "ruff>=0.8.0",
    "sentry-sdk>=2.19.0",
    "whitenoise[brotli]>=6.8.2",
]

[tool.coverage.run]
branch = true
data_file = ".coverage"
omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 30
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

default_section = "THIRDPARTY"
known_django = "django"
known_first_party = "main"
sections = [
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip_glob=[
    "*/migrations/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
FAIL_INVALID_TEMPLATE_VARS = true

addopts = "--strict-markers"

testpaths = [
    "tests/apps"
]

filterwarnings = [
    "ignore::DeprecationWarning:pytest_freezegun",
    "ignore::DeprecationWarning:kombu"
]

isort_ignore = [
    "*migrations/*.py"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "main.settings"

[tool.bumpver]
current_version = "v2023.01.0"
version_pattern = "vYYYY.0M.INC0"
#current_version = "v0.0.0"
#version_pattern = "vMAJOR.MINOR.PATCH"
commit = true
commit_message = "Bump version to {new_version}"
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
]
"project/__init__.py" = [
    '^__version__ = "{version}"$',
]
"../docs/conf.py" = [
    '^copyright = "YYYY, Stuart MacKay"$',
    '^version = "vYYYY.0M"$',
    '^release = "{version}"$',
    #'^version = "MAJOR.MINOR"$',
    #'^release = "{version}"$',
]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-freezegun>=0.4.2",
    "django-debug-toolbar>=4.4.6",
]
